syntax = "proto3";
package m2g.pb;

enum VariableType {
  NO_VARIABLE = 0;

  // For HUMAN_PLAYERs
  VICTORY_POINTS = 1;
  MONEY = 2; // Int
  INCOME_POINTS = 3;

  // For TILEs and MERCHANTs
  COAL_CUBE_COUNT = 11; // Also used by GAME_STATE_TRACKER
  IRON_CUBE_COUNT = 12; // Also used by GAME_STATE_TRACKER
  BEER_BARREL_COUNT = 13;
  IS_SOLD = 14;

  // Game state
  DRAW_DECK_SIZE = 21;
  IS_RAILROAD_ERA = 22;
  IS_LAST_ACTION_OF_PLAYER = 23;
  // The order of the following resources are important
  MONEY_SPENT_BY_PLAYER_0 = 24;
  MONEY_SPENT_BY_PLAYER_1 = 25;
  MONEY_SPENT_BY_PLAYER_2 = 26;
  MONEY_SPENT_BY_PLAYER_3 = 27;

  // For GAME_STATE_TRACKER
  // The order of the following resources are important
  FIRST_PLAYER_INDEX = 31;
  SECOND_PLAYER_INDEX = 32;
  THIRD_PLAYER_INDEX = 33;
  FORTH_PLAYER_INDEX = 34;
}
